# skillforge

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish-skills.yml  publish.yml
docs/: api.md  architecture.md  composition.md  getting-started.md  index.md  registry.md  runtime.md  security.md  skill-standard.md
examples/composed-workflow/: README.md  research-workflow.yaml
examples/data-analysis/: skill.py  skill.yaml
examples/hello-world/: skill.py  skill.yaml
examples/social-approval-review/: skill.py  skill.yaml
examples/web-scraper/: skill.py  skill.yaml
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/architecture/: index.html
site/composition/: index.html
site/getting-started/: index.html
site/registry/: index.html
site/runtime/: index.html
site/search/: search_index.json
site/security/: index.html
site/skill-standard/: index.html
src/skillforge/: __init__.py  config.py
src/skillforge/cli/: config_cmds.py  main.py  registry_cmds.py  skill_cmds.py  workflow_cmds.py
src/skillforge/composition/: __init__.py  nodes.py  workflow.py
src/skillforge/dashboard/: __init__.py  app.py
src/skillforge/dashboard/pages/: audit.py  browse.py  inspect.py  stats.py  test.py  workflows.py
src/skillforge/models/: __init__.py  execution.py  permissions.py  registry.py  skill.py
src/skillforge/registry/: __init__.py  community.py  installer.py  local.py  remote.py  resolver.py  server.py
src/skillforge/runtime/: __init__.py  executor.py  hooks.py  openapi.py  sandbox.py  wasm_sandbox.py
src/skillforge/runtime/providers/: __init__.py  base.py  deepseek.py  gemini.py  groq.py  ollama.py
src/skillforge/sdk/: __init__.py  client.py  decorators.py
src/skillforge/security/: __init__.py  audit.py  permissions.py
src/skillforge/skills/: __init__.py
src/skillforge/skills/builtins/: __init__.py
src/skillforge/skills/builtins/calculator/: skill.py  skill.yaml
src/skillforge/skills/builtins/datetime-utils/: skill.py  skill.yaml
src/skillforge/skills/builtins/echo/: skill.py  skill.yaml
src/skillforge/skills/builtins/file-reader/: skill.py  skill.yaml
src/skillforge/skills/builtins/http-client/: skill.py  skill.yaml
src/skillforge/skills/builtins/json-processor/: skill.py  skill.yaml
src/skillforge/skills/builtins/template-renderer/: skill.py  skill.yaml
src/skillforge/skills/builtins/xquik-research/: skill.py  skill.yaml
tests/: conftest.py  test_builtins.py  test_composition.py  test_models.py  test_new_features.py  test_registry.py  test_runtime.py  test_sdk.py  test_security.py  test_security_extended.py
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/snippets/: skillforge.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: skillforge.tmLanguage.json
vscode-extension/test/: extension.test.ts
