[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillforge"
description = "Reusable Agent Skills Registry & Runtime — standardized, secure, composable agent capabilities"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
keywords = ["agent", "skills", "registry", "runtime", "ai", "tools", "llm", "automation"]
dynamic = ["version"]

authors = [
    {name = "SkillForge Contributors", email = "team@skillforge.ai"}
]

maintainers = [
    {name = "SkillForge Contributors", email = "team@skillforge.ai"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "tomlkit>=0.12.0",
    "semver>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/shubhmartin107-web/skillforge"
Documentation = "https://skillforge.ai"
Source = "https://github.com/shubhmartin107-web/skillforge"
Issues = "https://github.com/shubhmartin107-web/skillforge/issues"
Changelog = "https://github.com/shubhmartin107-web/skillforge/blob/main/CHANGELOG.md"
Discussions = "https://github.com/shubhmartin107-web/skillforge/discussions"

[project.scripts]
skillforge = "skillforge.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0",
    "coverage>=7.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "build>=1.2.0",
    "twine>=5.1.0",
]
dashboard = [
    "gradio>=4.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]
deepseek = ["openai>=1.0.0"]
gemini = ["google-genai>=0.1.0"]
groq = ["groq>=0.8.0"]
ollama = ["ollama>=0.2.0"]
wasm = ["wasmtime>=15.0.0"]
all = [
    "skillforge[dev]",
    "skillforge[dashboard]",
    "skillforge[deepseek]",
    "skillforge[gemini]",
    "skillforge[groq]",
    "skillforge[ollama]",
    "skillforge[server]",
    "skillforge[wasm]",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["skillforge*", "skillforge.*"]

[tool.setuptools.package-data]
"skillforge.skills.builtins" = ["**/*.yaml", "**/*.py", "**/*.md"]

[tool.setuptools.dynamic]
version = {attr = "skillforge._version.__version__"}

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PTH", "PD"]
ignore = ["SIM117", "ARG001", "ARG002"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "SLF001", "ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
exclude = [
    "src/skillforge/skills/builtins/",
]

[[tool.mypy.overrides]]
module = ["tests*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: requires network access (deselect with '-m \"not network\"')",
    "integration: marks integration tests",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/skillforge"]
omit = ["*/tests/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\b",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_untyped_fields = false

[commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
